@startuml Main 
' !theme cerulean-outline


class Labyrinth {

}
class room {
}
class Door {
}
Labyrinth *-- room
Labyrinth *-- Door

abstract Item {

}

abstract Player {

}
class Professor extends Player {}
class Student extends Player {}

' Relationships

room *-- "*" Item
Player  *-- "*" Item

Labyrinth *-- Professor
Labyrinth *--    Student

room o--  Player




@enduml